--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
                      <!--Only the test cases with specified tags will be run.-->
                      <!--Use the syntax below.-->
                      <!--tags><param>TestCase tag1, tag2</param></tags-->
-					 <tags><param>TestCase Debug</param></tags>
+					 <tags><param>TestCase ${testtag}</param></tags>
 					
 
                      <!--Overrides service endpoints specified in the test.-->
@@ -182,6 +182,28 @@
             </executions>
          </plugin>
 
+			<!-- ====== Run Java Class Execution Plugin  -->
+			 <plugin>
+	  				<groupId>org.codehaus.mojo</groupId>
+	  				<artifactId>exec-maven-plugin</artifactId>
+	  				<version>1.6.0</version>
+	  				<executions>
+	      				<execution>
+	          				<id>my-execution</id>
+	          				<phase>test</phase>
+	          				<goals>
+	              				<goal>java</goal>
+	          				</goals>
+	      				</execution>
+	  				</executions>
+	  				<configuration>
+	    				<!-- mainClass>main.java.util.ASampleClass</mainClass-->
+	    				<mainClass>com.msg.qa.eventengine.readyapi.zz_temp</mainClass>
+	    				<classpathScope>test</classpathScope>
+	  				</configuration>
+	 		</plugin>
+
+
          <!--Add Maven Site Plugin.-->
          <!--This plugin improves test stability and prepares test data for Maven SureFire.-->
          <plugin>
@@ -194,7 +216,6 @@
          </plugin>
 
       </plugins>
-
    </build>
 
    <!--Add Maven SureFire Plugin.-->
@@ -207,6 +228,119 @@
          </plugin>
       </plugins>
    </reporting>
+
+
+	<repositories>
+		<repository>
+	        <id>atlassian-public1</id>
+	        <url>https://maven.atlassian.com/repository/public</url>
+	        <snapshots>
+	          <enabled>true</enabled>
+	          <updatePolicy>never</updatePolicy>
+	          <checksumPolicy>warn</checksumPolicy>
+	        </snapshots>
+	        <releases>
+	          <enabled>true</enabled>
+	          <checksumPolicy>warn</checksumPolicy>
+	        </releases>
+	    </repository>
+
+	    <repository>
+	        <id>atlassian-public2</id>
+	        <url>https://m2proxy.atlassian.com/repository/public</url>
+	        <snapshots>
+	            <enabled>true</enabled>
+	            <updatePolicy>daily</updatePolicy>
+	            <checksumPolicy>warn</checksumPolicy>
+	        </snapshots>
+	        <releases>
+	            <enabled>true</enabled>
+	            <checksumPolicy>warn</checksumPolicy>
+	        </releases>
+	    </repository>
+	    
+	    <repository>
+	        <id>atlassian-public3</id>
+	        <url>https://maven.atlassian.com/content/groups/public</url>
+	        <snapshots>
+	            <enabled>true</enabled>
+	            <updatePolicy>daily</updatePolicy>
+	            <checksumPolicy>warn</checksumPolicy>
+	        </snapshots>
+	        <releases>
+	            <enabled>true</enabled>
+	            <checksumPolicy>warn</checksumPolicy>
+	        </releases>
+	    </repository>
+		
+	</repositories>
+
+	<dependencies>
+	
+		<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+            <scope>test</scope>
+        </dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpcore</artifactId>
+		    <version>4.4.7</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>4.5.3</version>
+		</dependency>
+			
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20170516</version>
+		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/com.atlassian.jira/jira-rest-java-client-core -->
+		<dependency>
+		    <groupId>com.atlassian.jira</groupId>
+		    <artifactId>jira-rest-java-client-core</artifactId>
+		    <version>4.0.0</version>
+		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/com.atlassian.connect/ac-play-java_2.10 -->
+		<dependency>
+		    <groupId>com.atlassian.connect</groupId>
+		    <artifactId>ac-play-java_2.10</artifactId>
+		    <version>0.10.1</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/commons-configuration/commons-configuration -->
+		<dependency>
+		    <groupId>commons-configuration</groupId>
+		    <artifactId>commons-configuration</artifactId>
+		    <version>1.10</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.19</version>
+        </dependency>
+          <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.19</version>
+            <scope>test</scope>
+        </dependency>
+	
+	</dependencies>
 
 
 
