--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,6 @@
 
             <executions>
                <execution>
-
                   <!--Specifies the lifecycle phase to run ReadyAPI tests.-->
                   <!--We recommend using the test phase.-->
                   <phase>test</phase>
@@ -197,6 +196,7 @@
 	      				</execution>
 	  				</executions>
 	  				<configuration>
+	  					 <testFailureIgnore>true</testFailureIgnore>
 	    				<!-- mainClass>main.java.util.ASampleClass</mainClass-->
 	    				<mainClass>com.msg.qa.eventengine.readyapi.zz_temp</mainClass>
 	    				<classpathScope>test</classpathScope>
