--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.msg</groupId>
-	<artifactId>EE_ReadyApiAutoProject</artifactId>
+	<artifactId>EventEngineReadyApiProject</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
 
-	<name>EE_ReadyApiAutoProject</name>
+	<name>EventEngineReadyApiProject</name>
 	<url>https://api.msg.com</url>
 
 	<properties>
@@ -95,7 +95,7 @@
                      <!--Use the syntax below.-->
                      <!--tags><param>TestCase tag1, tag2</param></tags-->
 					 <tags><param>TestCase ${testtag}</param></tags>
-					
+
 
                      <!--Overrides service endpoints specified in the test.-->
                      <endpoint>${testhost}</endpoint>
@@ -256,7 +256,7 @@
 	            <checksumPolicy>warn</checksumPolicy>
 	        </releases>
 	    </repository>
-	    
+
 	    <repository>
 	        <id>atlassian-public3</id>
 	        <url>https://maven.atlassian.com/content/groups/public</url>
@@ -270,62 +270,62 @@
 	            <checksumPolicy>warn</checksumPolicy>
 	        </releases>
 	    </repository>
-		
+
 	</repositories>
 
 	<dependencies>
-	
+
 		<dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
             <scope>test</scope>
         </dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
 		    <artifactId>httpcore</artifactId>
 		    <version>4.4.7</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
 		    <artifactId>httpclient</artifactId>
 		    <version>4.5.3</version>
 		</dependency>
-			
+
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
 		    <groupId>org.json</groupId>
 		    <artifactId>json</artifactId>
 		    <version>20170516</version>
 		</dependency>
-		
-		
+
+
 		<!-- https://mvnrepository.com/artifact/com.atlassian.jira/jira-rest-java-client-core -->
 		<dependency>
 		    <groupId>com.atlassian.jira</groupId>
 		    <artifactId>jira-rest-java-client-core</artifactId>
 		    <version>4.0.0</version>
 		</dependency>
-		
-		
+
+
 		<!-- https://mvnrepository.com/artifact/com.atlassian.connect/ac-play-java_2.10 -->
 		<dependency>
 		    <groupId>com.atlassian.connect</groupId>
 		    <artifactId>ac-play-java_2.10</artifactId>
 		    <version>0.10.1</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/commons-configuration/commons-configuration -->
 		<dependency>
 		    <groupId>commons-configuration</groupId>
 		    <artifactId>commons-configuration</artifactId>
 		    <version>1.10</version>
 		</dependency>
-		
+
 		<dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -337,7 +337,7 @@
             <version>1.7.19</version>
             <scope>test</scope>
         </dependency>
-	
+
 	</dependencies>
 
 
