--- a/pom.xml
+++ b/pom.xml
@@ -279,6 +279,14 @@
 
 	<dependencies>
 
+
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.7</version>
+</dependency>
+
+
 		<dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
