--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,15 @@
                </dependency>
             </dependencies-->
 
+			<dependencies>			
+				<dependency>
+			    		<groupId>org.apache.commons</groupId>
+			    		<artifactId>commons-lang3</artifactId>
+			    		<version>3.7</version>
+				</dependency>
+			 </dependencies>
+			 
+			 
             <executions>
                <execution>
                   <!--Specifies the lifecycle phase to run ReadyAPI tests.-->
@@ -280,11 +289,6 @@
 	<dependencies>
 
 
-<dependency>
-    <groupId>org.apache.commons</groupId>
-    <artifactId>commons-lang3</artifactId>
-    <version>3.7</version>
-</dependency>
 
 
 		<dependency>
