--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
 			    		<groupId>org.apache.commons</groupId>
 			    		<artifactId>commons-lang3</artifactId>
 			    		<version>3.7</version>
-			    		<scope>test</scope>
+			    		<scope>compile</scope>
 				</dependency>
 			 </dependencies>
 			 
