--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,9 @@
             <!--IMPORTANT: Must be the same as your ReadyAPI version.-->
             <!--For maintenance builds, use 2.1.0-m-SNAPSHOT instead.-->
             
-            	<!--## Verion That Installed in Rasul Desktop is Below### -->
-            	 <version>2.4.0</version>
-            	<!-- version>2.4.0</version-->
+            	<!--## Verion That Installed in RASUL Desktop is Below### -->
+            	 <version>2.3.0</version>
+            	<!-- version>2.4.0</version-->  <!-- Version 2.4.0 Fail to load some jar or some error see Local Jenkin Build #41 -->
             	<!--version>2.3.0</version-->
             	<!-- version>1.3.1</version-->
             		
@@ -60,15 +60,6 @@
                </dependency>
             </dependencies-->
 
-			<dependencies>			
-				<dependency>
-			    		<groupId>org.apache.commons</groupId>
-			    		<artifactId>commons-lang3</artifactId>
-			    		<version>3.7</version>
-			    		<scope>compile</scope>
-				</dependency>
-			 </dependencies>
-			 
 			 
             <executions>
                <execution>
@@ -81,7 +72,6 @@
                   </goals>
 
                   <configuration>
-
                      <!--Required. Specifies the path to the project to execute.-->
                      <!--For composite projects, specify the folder that contains the project.-->
                      <projectFile>${basedir}</projectFile>
